--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "private": true,
   "dependencies": {
     "gren-lang": "^0.3.0"
+  },
+  "devDependencies": {
+    "gren-packages": "^3.2.1"
   }
 }
